--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                 android:layout_marginLeft="10dp"
                 android:text="December"
                 android:textSize="18sp"
-                app:typeface="Roboto-Light.ttf" />
+                app:typeface="Roboto-Medium.ttf" />
         </LinearLayout>
 
         <ImageView
@@ -170,6 +170,114 @@
     <FrameLayout
         android:id="@+id/container_body"
         android:layout_width="fill_parent"
+        android:layout_height="match_parent" />
+    <!--bottom sheet-->
+    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/main_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:fitsSystemWindows="true">
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:clipToPadding="true"
+            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/light_grey" />
+                <!--edit item-->
+                <LinearLayout
+                    android:id="@+id/edit_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_edit" />
+
+                    <com.ctrlplusz.anytextview.AnyTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/edit"
+                        android:textAllCaps="false"
+                        android:textColor="@color/title_text"
+                        android:textSize="16sp"
+                        app:typeface="Roboto-Medium.ttf" />
+
+                </LinearLayout>
+                <!--delete -->
+                <LinearLayout
+                    android:id="@+id/delete_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_delete" />
+
+                    <com.ctrlplusz.anytextview.AnyTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/delete"
+                        android:textAllCaps="false"
+                        android:textColor="@color/title_text"
+                        android:textSize="16sp"
+                        app:typeface="Roboto-Medium.ttf" />
+
+                </LinearLayout>
+                <!--add reminder-->
+                <LinearLayout
+                    android:id="@+id/reminder_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:orientation="horizontal"
+                    android:padding="5dp"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_reminder_" />
+
+                    <com.ctrlplusz.anytextview.AnyTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/add_reminder"
+                        android:textAllCaps="false"
+                        android:textColor="@color/title_text"
+                        android:textSize="16sp"
+                        app:typeface="Roboto-Medium.ttf" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
