--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="3dp" />
-    <solid android:color="@color/mauvre" />
+    <solid android:color="@color/title_text" />
     <padding
         android:bottom="0dp"
         android:left="0dp"
