--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,6 +140,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:elevation="5dp"
         android:layout_margin="10dp"
         android:background="@drawable/button_shape"
         android:layout_alignParentBottom="true"
