--- a/app/src/main/res/layout/empty_list.xml
+++ b/app/src/main/res/layout/empty_list.xml
@@ -31,7 +31,7 @@
         android:gravity="center_horizontal"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:text="It's cold and empty here. Add your todo's for today."
+        android:text="Not busy? Add something to do here. Work! Work! Work!"
         android:textColor="@color/grey"
         android:textSize="16sp"
         app:typeface="Roboto-Light.ttf" />
