--- a/app/src/main/res/layout/fragment_add_to_do.xml
+++ b/app/src/main/res/layout/fragment_add_to_do.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="stevekamau.todo.AddToDoFragment">
+    tools:context="stevekamau.todo.activity.AddToDoFragment">
 
     <ImageView
         android:id="@+id/cancel"
