--- a/app/src/main/res/layout/fragment_all_to_dos.xml
+++ b/app/src/main/res/layout/fragment_all_to_dos.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="stevekamau.todo.AddToDoFragment">
+    tools:context="stevekamau.todo.activity.AddToDoFragment">
 
     <ImageView
         android:id="@+id/cancel"
@@ -14,6 +14,16 @@
         android:clickable="true"
         android:padding="10dp"
         android:src="@drawable/ic_cancel" />
+
+    <ImageView
+        android:id="@+id/delete"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentRight="true"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:padding="10dp"
+        android:src="@drawable/ic_delete" />
 
     <com.ctrlplusz.anytextview.AnyTextView
         android:id="@+id/header"
@@ -39,4 +49,12 @@
         android:orientation="vertical"
         android:padding="10dp"
         android:scrollbars="none" />
+
+    <include
+        android:id="@+id/emptyList"
+        layout="@layout/empty_list"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header"
+        android:visibility="visible" />
 </RelativeLayout>
