--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -28,6 +28,7 @@
             android:paddingRight="20dp">
             <!--settings-->
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/settings_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,6 +59,7 @@
 
             <View
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="0.5dp"
                 android:background="@color/light_grey" />
 
