--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -40,12 +40,20 @@
     </RelativeLayout>
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/reminder_up_arrow"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="-5dp"
+        android:src="@drawable/ic_up_arrow_mauvre"
+        android:visibility="visible" />
     <LinearLayout
         android:id="@+id/reminder_set"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="-10dp"
         android:background="@drawable/button_shape_mauvre"
         android:elevation="5dp">
 
